# Advanced_Cpp_Assignment

./: .gitignore
Task_1/: CMakeLists.txt
Task_1/include/: entity.h  group.h  user.h  user_group_manager.h
Task_1/src/: main.cpp
Task_1/src/libs/: entity.cpp  group.cpp  user.cpp  user_group_manager.cpp
Task_2/: TypeList.cpp  main.cpp
Task_3/: TypeList.h  TypeMap.cpp
Task_4/: MixIn.cpp
Task_5/: Log.cpp  Log.h  test.cpp
Task_6/: ControlPoints.cpp
Task_7/: Set.cpp  main.cpp
